--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 15; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 142; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%) ;
@@ -237,15 +237,7 @@ img{
 .show-menu{
   bottom: 0;  
 }
-.change__language{
-    cursor: pointer;
-    font-size: 1.25rem;
-    color: var(--title-color);
-    margin-left: var(--mb-1);
-}
-.change__language:hover{
-    color: var(--first-color);
-}
+
 
 /* Active link */
 .active-link{
@@ -364,7 +356,6 @@ image{
     color: var(--first-color);
     text-decoration: none;
 }
-
 .buton--white:hover{
     background-color: #FFFF;
 }
@@ -432,12 +423,10 @@ image{
 .skills__title{
     font-size: var(--h3-font-size);
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin-bottom: var(--mb-0-5);
-    align-items: center;
     
 }
-
 .skills__subtitle{
     font-size: var(--small-font-size);
     color: var(--text-color-light);
@@ -450,14 +439,41 @@ image{
     margin-left: auto;
     transition: .3s;
 }
+.skills__titles{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--mb-0-5);
+}
 .skills__name{
     font-size: var(--normal-font-size);
     font-family: var(--font-medium);
 }
-.skill__icon{
-  color: var(--first-color);  
-  font-size: 1.5rem;
-  margin-right: 1.5rem;
+.skills__bar,
+.skills__percentage{
+    height: 5px;
+    border-radius: 0.25rem;
+}
+.skills__bar{
+    background-color: var(--first-color-lighter);
+}
+.skills__percentage{
+    display: block;
+    background-color: var(--first-color);
+}
+.skill__html{
+    width: 90%;
+}
+.skill__css{
+    width: 80%;
+}
+.skill__js,
+.skill__photoshop,
+.skill__illustrator{
+    width: 60%;
+}
+.skill__react
+{
+    width: 50%;
 }
 .skills__close .skills__list{
     height: 0;
@@ -465,7 +481,7 @@ image{
 }
 .skills__open .skills__list{
     height: max-content;
-    margin-bottom: 30px;
+    margin-bottom: var(--mb-2-5);
 }
 .skills__open .skills__arrow{
     transform: rotate(-180deg);
@@ -495,6 +511,7 @@ image{
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
     column-gap: 1.5rem;
+    /* justify-items: center;  */
     
 }
 .qualification__title{
@@ -981,7 +998,7 @@ image{
 
     /* ------------SERVICES------------ */
     .services__container{
-        grid-template-columns: repeat(2, 250px);
+        grid-template-columns: repeat(3, 218px);
         justify-content: center;
     }
     .services__icon{
