--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -919,7 +919,7 @@ image{
     .nav__icon,
     .nav__close,
     .nav__toggle{
-        display: none;
+        display: none !important;
     }
     .nav__list{
         display: flex;
