--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -410,6 +410,12 @@ image{
     display: flex;
     justify-content: center;
 }
+.about__data{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-evenly;
+}
 /*==================== SKILLS ====================*/
 .skills__container{
     row-gap: 0;
