--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -412,12 +412,13 @@ image{
 .about__button{
     display: flex;
     justify-content: center;
+    height: 80px;
 }
 .about__data{
     display: flex;
     flex-direction: column;
-    align-items: stretch;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
 }
 /*==================== SKILLS ====================*/
 .skills__container{
@@ -974,7 +975,7 @@ image{
         width: 350px;
     }
     .about__description{
-        text-align: initial;
+        text-align: center;
     }
     .about__info{
         justify-content: space-between;
