--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -159,6 +159,12 @@ img{
     display: grid;
     gap: 1.5rem;
 }
+.flex{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .header{
     width: 100%;
     position: fixed;
@@ -651,7 +657,7 @@ image{
     pointer-events: unset;
 }
 .portfolio__img{
-    width: 100%;
+    width: 70%;
     border-radius: .5rem;
     justify-self: center;
 }
@@ -668,8 +674,10 @@ image{
 .portfolio__data{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-evenly;
+    text-align: center;
+    row-gap: 0.5rem;
 }
 
 /* Sldier */
@@ -889,7 +897,7 @@ image{
     /* ------------VARIAS SECCIONES------------ */
     .about__container, 
     .skills__container,
-    .portfolio__content, 
+    /* .portfolio__content,  */
     .contact__container,
     .footer__container{
         grid-template-columns: repeat(2, 1fr);
@@ -1012,7 +1020,7 @@ image{
 
     /* ------------PORTFOLIO------------ */
     .portfolio__img{
-        width: 320px;
+        width: 70%;
     }
     .portfolio__container{
         align-items: center;
@@ -1060,7 +1068,7 @@ image{
 
     /* ------------PORTFOLIO------------ */
     .portfolio__content{
-        column-gap: 5rem;
+        row-gap: 2rem;
     }
      /* Ajustar las flechas de mi portfolio */
 
